# GoldenCheetah

./: .clang-format  .clang-tidy  .crs  .gitattributes  .gitignore  .travis.yml  AGENTS.md  BUILD_DEPENDENCIES_INSTALL.sh  BUILD_STATUS.md  BUILD_SUCCESS.md  BUILD_WORKAROUND.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DataFilter_lex.cpp  DataFilter_yacc.cpp  DataFilter_yacc.hpp  FINAL_REPORT.md  INSTALL-CMAKE  INSTALL-LINUX  INSTALL-MAC  INSTALL-WIN32  INSTALLATION_GUIDE.md  ISSUE_TEMPLATE.md  JsonRideFile_lex.cpp  JsonRideFile_yacc.cpp  JsonRideFile_yacc.hpp  MODERNIZATION.md  Makefile  PULL_REQUEST_REVIEW.md  README  README.md  RideDB_lex.cpp  RideDB_yacc.cpp  RideDB_yacc.hpp  TrainerDayAPIQuery_lex.cpp  TrainerDayAPIQuery_yacc.cpp  TrainerDayAPIQuery_yacc.hpp  VALIDATION.md  WorkoutFilter_lex.cpp  (+19 more)
qwt/: .gitignore  CHANGES  CMakeLists.txt  INSTALL  TODO  qwt.prf  qwt.pro  qwtbuild.pri  qwtconfig.pri  qwtconfig.pri.in  qwtfunctions.pri
qwt/admin/: msvc-qmake.bat  no-qt-keywords.sh  sf2package.sh  svn2package.sh
qwt/classincludes/: QwtScaleMapTable  classincludes.pro
qwt/designer/: .gitignore  designer.pro  qwt_designer_plotdialog.cpp  qwt_designer_plotdialog.h  qwt_designer_plugin.cpp  qwt_designer_plugin.h  qwt_designer_plugin.qrc  qwtplugin.cpp  qwtplugin.h
qwt/doc/: Doxyfile  DoxygenLayout.xml  changes.dox  doc.pro  doxyfilter.sh  install.dox  qwt.dox  qwtdoc.m4  screenshots.dox
qwt/examples/: examples.pri  examples.pro
qwt/playground/: playground.pri  playground.pro
qwt/src/: .gitignore  qwt.cpp  qwt.h  qwt_abstract_scale.cpp  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_arrow_button.cpp  qwt_axes_mask.cpp  qwt_axes_mask.h  qwt_axis_id.cpp  qwt_axis_id.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_map.h  qwt_compass.cpp  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_curve_fitter.cpp  qwt_curve_fitter.h  qwt_data.cpp  qwt_date.cpp  qwt_date_scale_draw.cpp  qwt_date_scale_engine.cpp  qwt_dial.cpp  qwt_dial.h  qwt_dial_needle.cpp  qwt_dial_needle.h  qwt_double_interval.cpp  qwt_double_interval.h  qwt_double_range.cpp  qwt_double_range.h  qwt_double_rect.cpp  qwt_double_rect.h  qwt_dyngrid_layout.cpp  qwt_event_pattern.cpp  qwt_global.h  (+137 more)
qwt/tests/: tests.pro
qwt/textengines/: textengines.pri  textengines.pro
src/: .gitattributes  .gitignore  .qmake.winrt_uuid_GoldenCheetah  ANT.cpp  ANT.h  ANTChannel.cpp  ANTChannel.h  ANTLogger.cpp  ANTLogger.h  ANTMessage.cpp  ANTMessage.h  ANTMessages.h  ANTlocalController.cpp  ANTlocalController.h  ANTplusController.cpp  ANTplusController.h  APIWebService.cpp  APIWebService.h  AboutDialog.cpp  AboutDialog.h  AddDeviceWizard.cpp  AddDeviceWizard.h  AddIntervalDialog.cpp  AddIntervalDialog.h  AerobicDecoupling.cpp  Aerolab.cpp  Aerolab.h  AerolabWindow.cpp  AerolabWindow.h  AllPlot.cpp  AllPlot.h  AllPlotInterval.cpp  AllPlotInterval.h  AllPlotSlopeCurve.cpp  AllPlotSlopeCurve.h  AllPlotWindow.cpp  AllPlotWindow.h  AnalysisSidebar.cpp  AnalysisSidebar.h  Athlete.cpp  (+649 more)
src/ANT/: ANT.cpp  ANT.h  ANTChannel.cpp  ANTChannel.h  ANTLogger.cpp  ANTLogger.h  ANTMessage.cpp  ANTMessage.h  ANTMessages.h  ANTlocalController.cpp  ANTlocalController.h
src/Charts/: Aerolab.cpp  Aerolab.h  AerolabWindow.cpp  AerolabWindow.h  AgendaWindow.cpp  AgendaWindow.h  AllPlot.cpp  AllPlot.h  AllPlotInterval.cpp  AllPlotInterval.h  AllPlotSlopeCurve.cpp  AllPlotSlopeCurve.h  AllPlotWindow.cpp  AllPlotWindow.h  BingMap.cpp  BlankState.cpp  BlankState.h  CPPlot.cpp  CPPlot.h  CalendarWindow.cpp  CalendarWindow.h  ChartBar.cpp  ChartBar.h  ChartSettings.cpp  ChartSettings.h  CpPlotCurve.cpp  CpPlotCurve.h  CriticalPowerWindow.cpp  CriticalPowerWindow.h  DiaryWindow.cpp  DiaryWindow.h  EquipmentCalculator.cpp  EquipmentCalculator.h  EquipmentWindow.cpp  EquipmentWindow.h  ExhaustionDialog.cpp  ExhaustionDialog.h  GcChartAxis.cpp  GcChartAxis.h  GcChartWindow.cpp  (+130 more)
src/Cloud/: AddCloudWizard.cpp  AddCloudWizard.h  Azum.cpp  Azum.h  BodyMeasures.cpp  BodyMeasures.h  BodyMeasuresDownload.cpp  BodyMeasuresDownload.h  CalDAV.cpp  CalDAV.h  CalDAVCloud.cpp  CalDAVCloud.h  CalendarDownload.cpp  CalendarDownload.h  CloudDBChart.cpp  CloudDBChart.h  CloudDBCommon.cpp  CloudDBCommon.h  CloudDBStatus.cpp  CloudDBTelemetry.cpp  CloudDBTelemetry.h  CloudDBUserMetric.cpp  CloudDBUserMetric.h  CloudDBVersion.cpp  CloudDBVersion.h  CloudJsonParsers.cpp  CloudJsonParsers.h  CloudService.cpp  CloudService.h  CyclingAnalytics.cpp  CyclingAnalytics.h  Dropbox.cpp  Dropbox.h  FileStore.cpp  FileStore.h  GoogleDrive.cpp  GoogleDrive.h  HrvMeasures.cpp  HrvMeasures.h  HrvMeasuresDownload.cpp  (+71 more)
src/Core/: APIWebService.cpp  APIWebService.h  Athlete.cpp  Athlete.h  BlinnSolver.cpp  BlinnSolver.h  BodyMeasures.cpp  BodyMeasures.h  Context.cpp  Context.h  ContextConstants.h  DataContext.cpp  DataContext.h  DataFilter-safe.cpp  DataFilter.cpp  DataFilter.h  DataFilter.l  DataFilter.y  EquipmentModel.cpp  EquipmentModel.h  EquipmentModelManager.cpp  EquipmentModelManager.h  EquipmentNode.cpp  EquipmentNode.h  FreeSearch.cpp  FreeSearch.h  GcCalendarModel.h  GcMacros.h  GcUpgrade.cpp  GcUpgrade.h  HrvMeasures.cpp  HrvMeasures.h  ICalendar.cpp  ICalendar.h  IntervalItem.cpp  IntervalItem.h  Measures.cpp  Measures.h  NamedSearch.cpp  NamedSearch.h  (+44 more)
src/FileIO/: Archive.cpp  ArchiveFile.cpp  ArchiveFile.h  AthleteBackup.cpp  AthleteBackup.h  BatchExportDialog.cpp  Bin2RideFile.cpp  Bin2RideFile.h  BinRideFile.cpp  BinRideFile.h  BodyMeasuresCsvImport.cpp  BodyMeasuresCsvImport.h  CommPort.cpp  CommPort.h  Computrainer3dpFile.cpp  Computrainer3dpFile.h  Computrainer3dpParser.cpp  Computrainer3dpParser.h  CsvRideFile.cpp  CsvRideFile.h  D2XX.cpp  D2XX.h  DataProcessor.cpp  DataProcessor.h  Device.cpp  Device.h  EpmParser.cpp  EpmParser.h  EpmRideFile.cpp  EpmRideFile.h  FilterHRV.cpp  FilterHRV.h  FitRideFile.cpp  FitRideFile.h  FitlogParser.cpp  FitlogParser.h  FitlogRideFile.cpp  FitlogRideFile.h  FixAeroPod.cpp  FixDeriveDistance.cpp  (+113 more)
src/Gui/: AboutDialog.cpp  AboutDialog.h  (+166 more)
(+1823 files in other folders)
